# fut-worlds-pickem

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  docker-compose.yml  justfile
.github/workflows/: ci.yml
.sqlx/: query-117bd75e877d2c99132642e554744bde4510cbd5e8b3bea933dc8d25e53249b4.json  query-1dc6b9e0cd9796dce43b14077fd12733c6bef07978afa2d6fcce46ff70216d2a.json  query-2e86c2f35a0076b7b1ded12c4853a6dc9dd9c398bcd0ac651fc10c9669d6599b.json  query-34c9c2ee3b1e2df65a136157b6659f55fe3e45a8c5c1375f30b23b272abedcf1.json  query-34f8cf8908a9905c2c84e70b2766c9c1765cca577d93bf52e7acc7c4e6e072da.json  query-36a7da4205e9c458b0d3f6f8c62025071eadca104dfd5e8a6ba7d013fc3cd8e6.json  query-3cc39b7556803952ee52e32d3bcf4dcc036c2981a5fc2e91d8481e91b54346f5.json  query-45a1cdc6a9a40f009a42937159e48003aec0f135b580f4e1e7b3e3860fa87842.json  query-46d30598530b68722e80543d798436c664e062194fcc343bf50e41157da55f76.json  query-48ee31bcf096b1319773b723df6e1f00a55d245bc8c0b1faf99bd12779ff5b29.json  query-54919ffcc2e3bc7998945b5adbc3b0308681042eb8cd508b76a1c8eb421850ae.json  query-58818538617d53eddf27d64ef9375d090a1777b1837a34914ed3bfb228ae6102.json  query-59dd924cd12ff8672f5ee795bed29735053c51915f30199b2ad436e93e7cc970.json  query-610da3cbe6c2fc8d57399b398fec901c5ea970d2fea192abb7fe3ef5f6cf1054.json  query-6551d0043814eda2147e349b0ed0ac19af4a69429c5f176bd12fc5d5dcc55c7f.json  query-6fff99ea1b23cd3737428b740503872ed187685ae58112a2fb9ec4b7f5d19b58.json  query-8307cdcaa89614503d993e3fc5358df89466f50b9981da22ce2842b02b0e72cf.json  query-844b8ed0fa58498fa1e7b2d65cbb814772e2afb08f3ae71ce8369d77c28763d1.json  query-8a384e7d8e4b14e08eef3198b3ea2371a013c61358c8d012a24e4c1a1c2bcc8c.json  query-95cc55204eb8a8edeb8d1f61f232d1d3499477b19ea83c21dc4dda545ecc74c1.json  query-998f5e4abacd44d8695ff2119fcde4229c2b102a166402facb9aaac2308759a9.json  query-a47bf6be9094f6c446cace4a301cb069b866ee665b13d85d945305dbb7388ee3.json  query-aaedc9b3d61b1c1f3516a865937cfaad109fb1205228452e2c3e76997beac945.json  query-aee10cb13aa0f1d8a3195c7f733a7b02ee8ebb0999e0ef42941f80ec0b3367cb.json  query-cf63864692ff4334cf51ae1cf8e3a84206fee0aefcb7da33ca4e5b884f51290d.json  query-d26b9d681eee0a3b2e20d03dae8f5ec5f7fbf1dee1a91cf65046c59a5e077c7c.json  query-d37b9b056217325ee0a9d3d49b9c9b1fded1b4d2fdf18ea69c789b1fbc1d5b8b.json  query-dd08299d0abb72d590fc113d251dde7e8655eadf579e64d693ef8cd915521948.json  query-e35f563aeda53e399c1ce8dbc573785635c3766859ad64d2ca0cf3e27e3e5da8.json  query-e79cd179cce159610db6b5ea87ef0afcfe16d570a46f23bc739ebbcd4bbd77a8.json  query-e8f74f67910e20ffb43646c6287022426e8de6231eb535f35bf89210ba3d0ccc.json  query-ef34a293af43413328995c0314dfa9311adb02d85e26aeeee0351ef56fcca8a5.json  query-ef83a6c039ac12391e33f8dfb08a702a60062a78f7a52ac392e8ae57470178cc.json  query-fa93f0273d400c7c04bb26c5daea2af3620f0de654e7dc6929dce1d19b7fd77d.json
crates/domain/: Cargo.toml
crates/domain/src/: error.rs  lib.rs  repository.rs
crates/domain/src/models/: group.rs  knockout_phase.rs  match_.rs  mod.rs  parent_ref.rs  phase.rs  prediction.rs  round.rs  scoring_rule.rs  standings_prediction.rs  team.rs  tournament.rs  tournament_group.rs  user.rs
crates/domain/src/scoring/: group_match.rs  knockout_match.rs  mod.rs  penalty.rs  standings.rs  tests.rs
crates/messaging/: Cargo.toml
crates/messaging/src/: error.rs  events.rs  lib.rs  publisher.rs  subscriber.rs  topics.rs
crates/persistence/: Cargo.toml
crates/persistence/src/: lib.rs  pool.rs
crates/persistence/src/repositories/: best_thirds_predictions.rs  groups.rs  knockout_phases.rs  mappers.rs  matches.rs  mod.rs  predictions.rs  rounds.rs  scoring_rules.rs  standings_predictions.rs  teams.rs  tournament_groups.rs  tournaments.rs  users.rs
crates/shared/: Cargo.toml
crates/shared/src/: config.rs  error.rs  errors.rs  flags.rs  lib.rs  tracing.rs
crates/sports-client/: Cargo.toml
crates/sports-client/src/: client.rs  error.rs  lib.rs
crates/sports-client/src/dto/: common.rs  match_data.rs  mod.rs  standings.rs  teams.rs
crates/telegram-client/: Cargo.toml
crates/telegram-client/src/: error.rs  lib.rs  throttle.rs
frontend/miniapp/: .env.example  Dockerfile  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/miniapp/src/: App.tsx  main.tsx
frontend/miniapp/src/lib/: api-client.ts  api-types.ts  api.ts  errors.ts  pickem.ts  telegram.ts
frontend/miniapp/src/pages/: PredictionsPage.tsx  RankingPage.tsx
frontend/miniapp/src/pages/predictions/: BestThirdsTab.tsx  MatchesTab.tsx  StandingsTab.tsx  shared.ts  ui.tsx
infra/: docker-compose.full.yml  docker-compose.yml
infra/config/: pgadmin-servers.json
migrations/: 0001_users_groups.sql  0002_rounds_matches.sql  0003_predictions.sql  0004_scoring_rules.sql  0005_tournament_data.sql  0006_scoring_rules_v2.sql  0007_predictions_v2.sql  0008_standings_predictions.sql
services/api/: Cargo.toml  Dockerfile
services/api/src/: app_state.rs  error.rs  main.rs
services/api/src/middleware/: auth.rs  mod.rs
services/api/src/routes/: mod.rs  parents.rs  predictions.rs  ranking.rs  rounds.rs
services/bot/: Cargo.toml  Dockerfile
services/bot/src/: app_state.rs  main.rs  update_loop.rs
services/bot/src/commands/: crear_pickem.rs  help.rs  join.rs  mod.rs  new_pickem.rs  parser.rs  play.rs  ranking.rs  start.rs  unirme.rs
services/bot/src/event_consumers/: mod.rs  notify.rs
services/events/: Cargo.toml  Dockerfile
services/events/src/: lib.rs  main.rs
services/events/src/ingester/: bootstrap.rs  football_data.rs  mod.rs  poll.rs
services/events/src/scheduler/: jobs.rs  mod.rs
services/events/src/scorer/: mod.rs
