[workspace]
resolver = "2"
members = [
    "crates/domain",
    "crates/persistence",
    "crates/messaging",
    "crates/sports-client",
    "crates/telegram-client",
    "crates/shared",
    "services/bot",
    "services/api",
    "services/events",
]

[workspace.package]
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
authors = ["edusu <edusuarez100@gmail.com>"]
publish = false

[workspace.dependencies]
# Async runtime
tokio = { version = "1.52", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time, IDs, errors
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.23", features = ["v4", "serde"] }
thiserror = "2.0"
anyhow = "1.0"
error-stack = "0.7"

# Async trait support
async-trait = "0.1"

# HTTP server
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# HTTP client
reqwest = { version = "0.13", default-features = false, features = ["rustls", "rustls-native-certs", "json", "http2"] }

# Database
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
    "macros",
    "migrate",
] }

# NATS
async-nats = "0.47"

# Telegram
# `client-reqwest` brings the async `Bot` HTTP client + the `AsyncTelegramApi`
# trait. Without this feature the crate is just type definitions.
frankenstein = { version = "0.49", features = ["client-reqwest"] }

# Scheduler
tokio-cron-scheduler = "0.15"

# Auth helpers
hmac = "0.13"
sha2 = "0.11"
urlencoding = "2.1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.32"
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }

# Config
figment = { version = "0.10", features = ["toml", "env"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Personal utility crate (concurrency primitives, retry, secrets, …). Pinned
# to a commit so that pushes to `main` upstream do not silently break the
# build on the next `cargo update`. Bump the `rev` when a new feature is
# wanted from there.
rust-utils = { git = "https://github.com/edusu/rust-utils", rev = "eec9a260932f86b201e9c01682fc2079d0b31581" }

# Local crates (declared here so services depend by `workspace = true` is not idiomatic;
# instead each consumer uses `path = "..."`. We keep this list as a directory map only.)

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
