[package]
name = "shared"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
description = "Cross-cutting utilities: configuration, tracing, error types."

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
error-stack = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rust-utils = { workspace = true }
