[package]
name = "sports-client"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
description = "Wrapper around the upstream football data provider (football-data.org)."

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
error-stack = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
