[package]
name = "telegram-client"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
description = "Trait + Frankenstein-backed implementation for sending Telegram messages."

[dependencies]
frankenstein = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
error-stack = { workspace = true }
tracing = { workspace = true }
rust-utils = { workspace = true }
