[package]
name = "api"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
description = "HTTP API consumed by the Telegram Mini App."

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
domain = { path = "../../crates/domain" }
persistence = { path = "../../crates/persistence" }
messaging = { path = "../../crates/messaging" }
shared = { path = "../../crates/shared" }

tokio = { workspace = true }
sqlx = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
async-nats = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
error-stack = { workspace = true }

# Mini App initData verification
hmac = { workspace = true }
sha2 = { workspace = true }
urlencoding = { workspace = true }
